database/operators/base/stackgres/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: admin-ui
  namespace: database
spec:
  selector:
    app: stackgres-restapi
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
