database/operators/base/stackgres/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackgres
  namespace: database
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.allow-http: "false"
spec:
  ingressClassName: nginx
  tls:
    - secretName: stackgres-stg-tls
      hosts:
        - stackgres.stg.${PRIMARY_DOMAIN}
  rules:
    - host: stackgres.stg.${PRIMARY_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: admin-ui
                port:
                  name: http
